[tool.poetry]
name = "doc-analyzer"
version = "0.1.0"
description = ""
authors = ["Rhaqim <anusiemj@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.16.3"
flask = "^2.3.2"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.74"
spacy = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
