[tool.poetry]
name = "doc-analyzer"
version = "0.1.0"
description = ""
authors = ["Rhaqim <anusiemj@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.16.3"
flask = "^2.3.2"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.74"
spacy = "^3.6.0"
sklearn = "^0.0.post7"
transformers = "^4.31.0"
torch = "^2.0.1"
torchtext = "^0.15.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
